--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,6 +42,7 @@ simplelog = { version = "^0.12.0", optional = true }
 tar = "^0.4.38"
 uuid = { version = "^1.0", features = ["serde", "v4"] }
 zip = "^0.6.2"
+zstd = "^0.10.2"
 
 [dev-dependencies]
 env_logger = "^0.9.0"
