use bunlded sqlite instead of system sqlite

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,8 +31,8 @@ rand = "^0.8.5"
 regex = "^1.5.5"
 # crates.io version depends on uuid v0.8.x and cause compilation errors,
 # but the version on `master` has been bumped already
-# rusqlite = { version = "^0.27.0", default-features = false, features = ["chrono", "uuid"] }
-rusqlite = { git = "https://github.com/rusqlite/rusqlite.git", default-features = false, features = ["chrono", "functions", "uuid"] }
+# rusqlite = { version = "^0.27.0", ... }
+rusqlite = { git = "https://github.com/rusqlite/rusqlite.git", default-features = false, features = ["chrono", "functions", "bundled", "uuid"] }
 rust-lzma = "^0.5.1"
 serde = { version = "^1.0", features = ["derive"] }
 serde_yaml = "^0.8.24"
